# Zifazah

./: CMakeLists.txt  GLoader.cpp  GLoader.h  Gadgets.cpp  Gadgets.h  LegiDTI.cpp  LegiDTI.pro  VTKcppmoth.cpp  VTKcppmoth.h  cppmoth.cpp  engine_helper.cpp  engine_helper.h  glrand.h  helptext  imgVolRender.cpp  imgVolRender.h  lab.txt  point.h  presets.xml  runme  testTfWidget.cpp  testbed.ui  tfWidget.cpp  tfWidget.h  tgdataReader.cpp  tgdataReader.h  transfer_function.h  ui_tfwidget.h  valueSettings.xml  vmRenderWindow.cpp  vmRenderWindow.h  vmRenderWindow_bakup.cpp  vtkCanvasWidget.cpp  vtkCanvasWidget.h  vtkDepthSortPoints.cpp  vtkDepthSortPoints.h  vtkLegiInteractionRecorder.cpp  vtkLegiInteractionRecorder.h  vtkLegiInteractorStyle.cpp  vtkLegiInteractorStyle.h  (+12 more)
examples/: ccfa.svls  cstFAbounds.svls  evenlonger.svls  firstMixed.svls  longerScript.svls  measure.svls  newSyntax.svls  scenario2.svls  scenario3.svls  spatialRelative.svls  updateMixed.svls
